fixed background on mobile too

--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,7 @@ body, html {
     background-color: lightblue;
     background-repeat: round;
   }
-svg {
-    position: absolute;
-    /* top: 0; */
-    /* left: 0; */
-    z-index: -10;
-    /* width: 100%; */
-    height: 100%;
-    background-repeat: round;
-    /* background-position: center; */
-    margin: 0;
-    padding: 0;
-}
+
 body {
     display: flex;
     flex-direction: column;
@@ -49,6 +38,14 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 @media (min-width: 767px) {
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-image: url("background.png");
+        background-color: lightblue;
+        background-repeat: round;
+      }
     .content {
         margin-top: 50px;
         display: flex;
